<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <View
       android:id="@+id/top_view"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:background="@drawable/bg_view"
       android:orientation="vertical" />

   <GridLayout
       android:id="@+id/glayout"
       android:layout_width="match_parent"
       android:layout_height="500dp"
      android:columnCount="2"
      android:rowCount="3"
       android:layout_marginLeft="24dp"
       android:layout_marginRight="25dp"
       android:layout_marginTop="-80dp"
       android:layout_below="@id/top_view">

      <androidx.cardview.widget.CardView
          android:id="@+id/notification"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          android:layout_row="1"
          android:layout_column="0"
          android:layout_margin="10dp"
          app:cardCornerRadius="15dp"
          app:cardElevation="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">

            <ImageView
                android:src="@drawable/baseline_notifications_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/notification"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
         </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/route"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          android:layout_row="1"
          android:layout_column="1"
          android:layout_margin="10dp"
          app:cardCornerRadius="15dp"
          app:cardElevation="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">

            <ImageView
                android:src="@drawable/baseline_fmd_good_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/route"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
         </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/info"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          android:layout_row="2"
          android:layout_column="0"
          android:layout_margin="10dp"
          app:cardCornerRadius="15dp"
          app:cardElevation="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">

            <ImageView
                android:src="@drawable/baseline_info_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/garbageInfo"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
         </LinearLayout>
      </androidx.cardview.widget.CardView>


   </GridLayout>

   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/bottom_navigator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       app:itemBackground="@color/purple_500"
       app:itemTextColor="@drawable/selector"
       app:itemIconTint="@drawable/selector"
       app:menu="@menu/menu"/>

   <TextView
       android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/dashboard"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:textSize="36sp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="30dp"/>

</RelativeLayout>